# Video-Feed-GPU-Filtering

./: .gitignore  CMakeLists.txt  README.md  WebcamFilteringWithOpenCVandCUDANPP.sln  vcpkg-configuration.json  vcpkg.json
WebcamFilteringWithOpenCVandCUDANPP/: CMakeLists.txt  WebcamFilteringWithOpenCVandCUDANPP.vcxproj  WebcamFilteringWithOpenCVandCUDANPP.vcxproj.filters
WebcamFilteringWithOpenCVandCUDANPP/src/: main.cpp
WebcamFilteringWithOpenCVandCUDANPP/src/EventQueues/: ViewEventQueue.cpp  ViewEventQueue.h
WebcamFilteringWithOpenCVandCUDANPP/src/Events/: ViewEvent.cpp  ViewEvent.h  ViewEvent_ActivateCombinedFilter.cpp  ViewEvent_ActivateCombinedFilter.h  ViewEvent_ChangeActiveFilters.cpp  ViewEvent_ChangeActiveFilters.h  ViewEvent_ChangeActiveFiltersOnCombinedFilter.cpp  ViewEvent_ChangeActiveFiltersOnCombinedFilter.h
WebcamFilteringWithOpenCVandCUDANPP/src/Events/ViewEvents/: ActivateCombinedFilter.cpp  ActivateCombinedFilter.h  ViewEvent.cpp  ViewEvent.h  ViewEventTypes.h
WebcamFilteringWithOpenCVandCUDANPP/src/Events/ViewEvents/ViewChangeFilterEvents/: ChangeActiveFilters.cpp  ChangeActiveFilters.h  ChangeActiveFiltersOnCombinedFilter.cpp  ChangeActiveFiltersOnCombinedFilter.h  ViewChangeFilterEvent.cpp  ViewChangeFilterEvent.h
WebcamFilteringWithOpenCVandCUDANPP/src/Filters/: FilterTypes.h
WebcamFilteringWithOpenCVandCUDANPP/src/Texture/: ImageTexture.cpp  ImageTexture.h
WebcamFilteringWithOpenCVandCUDANPP/src/Webcam/: WebcamController.cpp  WebcamController.h  WebcamMats.h  WebcamView.cpp  WebcamView.h
